<resources>
    <string name="app_name">Drive Cube\'s</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="provided_by_ygroup_company">provided by: YGROUP Company</string>
    <string name="follow_these_instructions">Follow these instructions: </string>
    <string name="connection">connection</string>
    <string name="_1_check_wifi_connection_state">1.  Click there to check WIFI connection state:</string>
    <string name="titleA">Move car</string>
    <string name="titleB">Draw Line</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="android_studio">Android Studio</string>
    <string name="enter_directions_for_the_car">Enter directions for the car</string>

    <string name="enter_ip_adress_wifi"><u> Enter IP adress WiFi: </u></string>
    <string name="enter_here_ip_adress">enter here IP adress</string>
    <string name="connection_s">Connection\'s</string>
    <string name="provided_by_ygroup">Provided by: YGROUP</string>
    <string name="s">Control car's</string>
    <string name="stepper_motor">Stepper motor</string>
    <string name="draw_line">Draw line</string>
    <string name="send"> Send\nData</string>
    <string name="clean"> Clear\nDashboard</string>
    <string name="enter_direction_and_send_car">Enter direction and send data to car</string>
    <string name="enter_ip_adress">Enter Ip adress</string>
    <string name="_192_168_4_1">192.168.43.9</string>
</resources>
