<LinearLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ssss"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".activity.activity.activity.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_border"
        android:clickable="true"
        android:focusable="true"
        android:padding="15dp"

        android:text="@string/s"
        android:textAllCaps="false"
        android:textColor="#ffd300"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_border"
        android:padding="15dp"
        android:text="@string/stepper_motor"
        android:textAllCaps="false"
        android:textColor="#ffd300"
        android:textSize="20sp"
        android:clickable="true"
        android:textStyle="italic"
        android:id="@+id/button2"
        tools:ignore="KeyboardInaccessibleWidget" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:padding="15dp"
        android:clickable="true"
        android:text="@string/draw_line"
        android:textAllCaps="false"
        android:textColor="#ffd300"
        android:textSize="20sp"
        android:textStyle="italic"
        android:id="@+id/button3"
        android:focusable="true" />
</LinearLayout>